[package]
name = "crash"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
bytes = "1.9.0"
color-eyre = "0.6.3"
enum-repr = "0.2.6"
enumflags2 = "0.7.10"
hpack = "0.3.0"
nom = "7.1.3"
rustls-native-certs = "0.8.1"
tokio = { version = "1.41.1", features = ["full"] }
tokio-rustls = "0.26.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
